# waybox

./: .build.yml  .editorconfig  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
data/: autostart  environment  menu  meson.build  rc.xml  waybox.desktop  waybox.sh  xdg-autostart
include/waybox/: cursor.h  output.h  rgb.h  seat.h  server.h  stringop.h  style.h  style_defaults.h  util.h  xdg_shell.h
po/: LINGUAS  POTFILES.in  af.po  ar.po  be.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl_ES.po  he.po  hr.po  hu.po  ia.po  it.po  ja.po  lt.po  lv.po  meson.build  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  (+4 more)
protocol/: meson.build
src/: main.c  meson.build  output.c
styles/: Artwiz  BlueNight  Flux  LemonSpace  Makemodule.am  Makro  MerleyKay  Meta  Nyz  Operation  Outcomes  Results  Shade  Twice  qnx-photon
styles/BlueFlux/: Makemodule.am  theme.cfg
styles/BlueFlux/pixmaps/: Makemodule.am  button_close_active.xpm  button_close_pressed.xpm  button_close_unfocus.xpm  button_max_active.xpm  button_max_pressed.xpm  button_max_unfocus.xpm  button_min_active.xpm  button_min_pressed.xpm  button_min_unfocus.xpm  button_stick_active.xpm  button_stick_pressed.xpm  button_stick_unfocus.xpm  button_stuck.xpm  button_stuck_unfocus.xpm  button_toolbar.xpm  button_toolbar_pressed.xpm  menu_frame.xpm  title_bar.xpm  title_bar_unfocus.xpm  toolbar.xpm  toolbar_label.xpm
styles/Emerge/: Makemodule.am  theme.cfg
styles/Emerge/pixmaps/: Makemodule.am  bullet.xpm  close-pressed.xpm  close-unfocus.xpm  close.xpm  icon-pressed.xpm  icon-unfocus.xpm  icon.xpm  max-pressed.xpm  max-unfocus.xpm  max.xpm  selected.xpm  stick-pressed.xpm  stick.xpm  stuck-pressed.xpm  stuck-unfocus.xpm  stuck.xpm  unselected.xpm
styles/arch/: Makemodule.am  theme.cfg
styles/arch/pixmaps/: Makemodule.am  bullet.xpm  closefcs.xpm  closepr.xpm  closeufcs.xpm  frame.xpm  gripfcs.xpm  maxfcs.xpm  maxpr.xpm  maxufcs.xpm  menuiconfcs.xpm  menuiconpr.xpm  menuiconufcs.xpm  minfcs.xpm  minpr.xpm  minufcs.xpm  selected.xpm  shadefcs.xpm  shadepr.xpm  shadeufcs.xpm  stickfcs.xpm  stickpr.xpm  stickufcs.xpm  stuckfcs.xpm  stuckufcs.xpm  tbarfcs.xpm  tbarufcs.xpm  unselected.xpm  unshadefcs.xpm  unshadepr.xpm  unshadeufcs.xpm
styles/bloe/: Makemodule.am  theme.cfg
styles/bloe/pixmaps/: Makemodule.am  closefcs.xpm  closepr.xpm  closeufcs.xpm  maxfcs.xpm  maxpr.xpm  maxufcs.xpm  menuiconfcs.xpm  menuiconpr.xpm  menuiconufcs.xpm  minfcs.xpm  minpr.xpm  minufcs.xpm  shadefcs.xpm  shadepr.xpm  shadeufcs.xpm  stickfcs.xpm  stickpr.xpm  stickufcs.xpm  stuckfcs.xpm  stuckufcs.xpm  tbarfcs.xpm  tbarufcs.xpm  unshadefcs.xpm  unshadepr.xpm  unshadeufcs.xpm  windowlabelfcs.xpm  windowlabelufcs.xpm
styles/bora_black/: Makemodule.am  theme.cfg
styles/bora_blue/: Makemodule.am  theme.cfg
styles/bora_green/: Makemodule.am  theme.cfg
styles/carp/: Makemodule.am  theme.cfg
styles/carp/pixmaps/: blank.xpm  close.xpm  max.xpm  min.xpm  shade.xpm  unshade.xpm
styles/green_tea/: Makemodule.am  theme.cfg
styles/ostrich/: Makemodule.am  theme.cfg
styles/zimek_bisque/: Makemodule.am  theme.cfg
styles/zimek_darkblue/: Makemodule.am  theme.cfg
styles/zimek_green/: Makemodule.am  theme.cfg
waybox/: config.c  config.h  cursor.c  decoration.c  decoration.h  idle.c  idle.h  layer_shell.c  layer_shell.h  main.c  meson.build  output.c  seat.c  server.c  stringop.c  style.c  style_map.h  util.c  xdg_shell.c
